<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:background="?attr/scBackgroundColor"
    android:minWidth="@dimen/dialog_width"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/customize_player" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_counter_horizontal_margin"
        android:layout_marginTop="@dimen/default_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/Header3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customize_player_profile" />

        <Spinner
            android:id="@+id/profile_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spinner_start_margin" />

    </LinearLayout>

    <TextView
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/customize_player_profiles_hint"
        android:textSize="12sp" />

    <TextView
        style="@style/Header3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_counter_horizontal_margin"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/assign_player" />

    <LinearLayout
        android:id="@+id/assign_player_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_counter_horizontal_margin"
        android:layout_marginTop="@dimen/default_padding_half"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/assign_player_offline_hint"
        style="@style/Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_counter_horizontal_margin"
        android:layout_marginTop="@dimen/default_padding_half"
        android:text="@string/assign_player_offline_empty"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        style="@style/Header3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_counter_horizontal_margin"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/temporary_player_name" />

    <EditText
        android:id="@+id/temp_name_edit_text"
        style="@style/NameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_counter_horizontal_margin"
        android:layout_marginTop="@dimen/default_padding_half"
        android:hint="@string/temporary_player_name_hint"
        android:imeOptions="actionDone"
        android:maxLines="1" />

    <TextView
        style="@style/Header3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/customize_player_color" />

    <com.intagri.mtgleader.view.LineColorPickerView
        android:id="@+id/color_picker_view"
        style="@style/ColorPicker"
        android:layout_width="match_parent"
        android:layout_height="@dimen/color_picker_height"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginEnd="@dimen/default_padding"
        android:elevation="4dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:orientation="horizontal"
        app:rows="2" />

    <Button
        android:id="@+id/save_button"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_counter_section_spacing"
        android:text="@string/save" />

</LinearLayout>
