<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/friends" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            style="@style/Header3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_friend" />

        <EditText
            android:id="@+id/invite_username_input"
            style="@style/NameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/header_section_header_top_margin"
            android:hint="@string/friend_username_hint"
            android:inputType="textPersonName"
            android:autofillHints="username" />

        <Button
            android:id="@+id/send_invite_button"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_button_margin"
            android:minHeight="@dimen/menu_button_small_height"
            android:text="@string/send_invite" />

        <TextView
            android:id="@+id/message_text"
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding_half"
            android:visibility="gone"
            tools:text="Invite sent."
            tools:visibility="visible" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_menu_divider_width"
        android:background="?attr/scDividerColor" />

    <TextView
        style="@style/Header3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/friends_list" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friends_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never" />

        <TextView
            android:id="@+id/empty_text"
            style="@style/Label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/friends_empty"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>

</LinearLayout>
